TestRepo2/src/objects/Diageo_Product__c.object
<CustomObject>
    <fields>
        <fullName>API_External_ID__c</fullName>
        <displayFormat>DP-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>API External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Alcoholic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcoholic?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <picklist>
            <picklistValues>
                <fullName>FALSE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Blended Scotch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic Malt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Display_ID__c</fullName>
        <externalId>true</externalId>
        <label>Content Display ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_ID__c</fullName>
        <label>Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diageo_Brand_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diageo Brand</label>
        <referenceTo>Diageo_Brand__c</referenceTo>
        <relationshipName>Diageo_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diageo_Product_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diageo Product Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipe Diageo Products</relationshipLabel>
        <relationshipName>Recipe_Diageo_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diageo_Product_Tags__c</fullName>
        <label>Diageo Product Tags</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equivalent_Units__c</fullName>
        <label>Equivalent Units</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>HYPERLINK (&quot;https://na1.salesforce.com/&quot;&amp; Content_Display_ID__c ,IMAGE(&quot;https://c.na1.content.force.com/sfc/servlet.shepherd/version/download/&quot; + Content_ID__c , Name,50,50))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>EN-US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EN-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SAP_Level_5_Code__c</fullName>
        <label>SAP Level 5 Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Level_5_Descr__c</fullName>
        <label>SAP Level 5 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recipe Diageo Product</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>API_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Locale__c</columns>
        <columns>Diageo_Brand_Id__c</columns>
        <columns>Diageo_Product_Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllFields</fullName>
        <columns>API_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Locale__c</columns>
        <columns>Diageo_Brand_Id__c</columns>
        <columns>Available__c</columns>
        <columns>Diageo_Product_Image__c</columns>
        <columns>Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllFields</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipe Diageo Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>